@@ -1,3 +1,13 @@
+2014-01-13 Riccardo Mottola <rm@gnu.org>
+
+	* Framework/PCFileManager.m
+	* Headers/ProjectCenter/PCFileManager.h
+	Convenience method to find executables, by Richard Frith-Macdonald
+
+	* Modules/Preferences/Build/PCBuildPrefs.m
+	* Modules/Preferences/Misc/PCMiscPrefs.m
+	Use the convenience method to determine better defaults for make and gdb.
+
 2013-12-17 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/PCProjectLauncher.m
